Create spec when not exist (#197)
