# backend/pkg/rest/apiinventory_controller.go
@@ -16,12 +16,14 @@
 package rest
 
 import (
+	"errors"
 	"fmt"
 	"net/http"
 	"strconv"
 
 	"github.com/go-openapi/runtime/middleware"
 	log "github.com/sirupsen/logrus"
+	"gorm.io/gorm"
 
 	"github.com/openclarity/apiclarity/api/server/models"
 	"github.com/openclarity/apiclarity/api/server/restapi/operations"
@@ -39,9 +41,9 @@ func (s *Server) PostAPIInventory(params operations.PostAPIInventoryParams) midd
 			Message: "please provide name",
 		})
 	}
-	if params.Body.DestinationNamespace == "" {
+	if params.Body.APIType == models.APITypeINTERNAL && params.Body.DestinationNamespace == "" {
 		return operations.NewPostAPIInventoryDefault(http.StatusBadRequest).WithPayload(&models.APIResponse{
-			Message: "please provide destinationNamespace",
+			Message: "please provide destinationNamespace for internal apis",
 		})
 	}
 	if params.Body.Port < 1 {
@@ -97,6 +99,10 @@ func (s *Server) GetAPIInventoryAPIIDFromHostAndPort(params operations.GetAPIInv
 	apiID, err := s.dbHandler.APIInventoryTable().GetAPIID(params.Host, params.Port)
 	if err != nil {
 		log.Errorf("Failed to get API ID: %v", err)
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			return operations.NewGetAPIInventoryAPIIDFromHostAndPortNotFound().WithPayload(&models.APIResponse{Message: err.Error()})
+		}
+
 		return operations.NewGetAPIInventoryAPIIDFromHostAndPortDefault(http.StatusInternalServerError)
 	}
 
